--- a/src/.env
+++ b/src/.env
@@ -1,2 +1,4 @@
 REACT_APP_SUPABASE_URL=https://tozsyavblkkrehjbwhvu.supabase.co
 # REACT_APP_SUPABASE_ANON_KEY=
+# RAZORPAY_ID_KEY="rzp_test_79aimvjGGIKYEa"
+# RAZORPAY_SECRET_KEY="GAgByHE2gaGIhHdbZmiqt9VO"
